--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start":"node server.js", "dev:server":"nodemon server.js"
+    "start":"nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
