--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,17 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "mongodb": "^4.5.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
