--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "helmet": "^5.0.2",
     "mongodb": "^4.5.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react-router-dom": "5.1"
   }
 }
