--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
-    "react-router-dom": "5.1"
+    "react-router-dom": "5.1",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
